# memer

./: .envrc  .gitignore  .pre-commit-config.yaml  .renovate.json5  .renovaterc.json5  Dockerfile  README.md  Taskfile.yaml  default.nix  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
.github/: labeler.yaml  labels.yaml  renovate.json5
.github/renovate/: labels.json5  semanticCommits.json5
.github/workflows/: ci.yaml  docker-build.yaml  image-release.yaml  label-sync.yaml  labeler.yaml  renovate.yaml
.taskfiles/models/: Taskfile.yaml
.taskfiles/precommit/: Taskfile.yaml
.taskfiles/uv/: Taskfile.yaml
docs/: README.md
scripts/: download-model.sh  download-models.sh
src/: broker.py  clip_service.py  config.py  main.py  meme.py  meme_posted_event.py  meme_posted_event_handler.py  repost_event.py  repost_response.py  template_builder.py  vector_service.py
src/qdrant/: client.py  meme_service.py
tests/: seeder.py
tests/integration/: duplicate_meme_test.py
tests/unit/: test_repost_response.py  test_vector_service.py
