[project]
name = "memer"
version = "0.1.1"
description = "Checks for reposts"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "clip",
    "faststream==0.5.44",
    "ftfy==6.3.1",
    "packaging==25.0",
    "pillow==11.2.1",
    "pydantic==2.11.5",
    "qdrant-client==1.14.2",
    "regex==2024.11.6",
    "aio-pika==9.5.5",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tqdm==4.67.1",
    "pydantic-settings>=2.8.0",
    "sentence-transformers==4.1.0"
]

[dependency-groups]
dev = [
  "pytest==8.3.5"
]
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]
clip = { git = "https://github.com/openai/CLIP.git" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "src"
]

[tool.pyright]
# ...
venvPath = "."
venv = ".venv"

[app.model]
name = "ViT-B/32"
repost_threshold=0.95
