[project]
name = "memer"
version = "0.1.1"
description = "Checks for reposts"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "clip",
    "faststream==0.6.2",
    "ftfy==6.3.1",
    "packaging==25.0",
    "pillow==12.0.0",
    "pydantic==2.12.4",
    "qdrant-client==1.15.1",
    "regex==2025.7.34",
    "aio-pika==9.5.7",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "tqdm==4.67.1",
    "pydantic-settings>=2.8.0",
    "sentence-transformers==5.1.2"
]

[dependency-groups]
dev = [
  "pytest==8.4.2"
]
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]
clip = { git = "https://github.com/openai/CLIP.git" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "src"
]

[tool.pyright]
# ...
venvPath = "."
venv = ".venv"

[app.model]
name = "ViT-B/32"
repost_threshold=0.95
